--- a/wp-content/themes/supermarket-ecommerce/assets/css/custom-style.css
+++ b/wp-content/themes/supermarket-ecommerce/assets/css/custom-style.css
@@ -45,6 +45,20 @@
     z-index: 999;
   }
 
+  .header-search .dgwt-wcas-search-wrapp .dgwt-wcas-search-form input[type=search].search-field {
+      border: 0;
+    -webkit-box-shadow: none;
+    box-shadow: none;
+    padding-top: 7px;
+    padding-right: 60px;
+    padding-bottom: 7px;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+    height: 34px;
+    font-size: 14px;
+    line-height: 20px;
+  }
+
 /**
   * feature products
   */
@@ -63,6 +77,7 @@ div#contact-floated {
   position: fixed;
   top: 50%;
   left: 0;
+  z-index: 1;
   color: #faa61a;
   border: 1px solid;
   background-color: #343748;
