--- a/wp-content/themes/supermarket-ecommerce/style.css
+++ b/wp-content/themes/supermarket-ecommerce/style.css
@@ -23,7 +23,7 @@ body {
 	margin: 0;
 	font-family: 'Open Sans', sans-serif;
 	background: #f7f6f6;
-	
+
 }
 h1,h2,h3,h4,h5,h6{
 	font-family: 'Poppins', sans-serif;
@@ -63,7 +63,7 @@ p{
 	font-size: 15px;
 	margin-bottom: 10px;
     line-height: 1.8;
-    
+
 }
 pre {
 	font-size: 1em;
@@ -75,10 +75,10 @@ a {
 }
 a:active,
 a:hover {
-	outline-width: 0;	
+	outline-width: 0;
 }
-a:focus, input:focus, textarea:focus, button:focus, 
-.woocommerce form .form-row input.input-text:focus, 
+a:focus, input:focus, textarea:focus, button:focus,
+.woocommerce form .form-row input.input-text:focus,
 .woocommerce form .form-row textarea:focus{
 	outline: 1px dotted #000;
 	border-bottom: 1px dotted #000;
@@ -477,6 +477,11 @@ input[type="submit"].secondary:focus {
 	background: #bbb;
 }
 
+ol ol, ul ul, ol ul, ul ol {
+   margin-bottom: 0;
+   margin-left: 0;
+}
+
 /* Placeholder text color -- selectors need to be separate to work. */
 ::-webkit-input-placeholder {
 	color: #3f3f3f;
@@ -745,7 +750,7 @@ ul.list_nav {
 }
 .social-icons i{
 	margin: 0 15px;
-	color: #343748; 
+	color: #343748;
 	font-size: 13px;
 }
 .email{
@@ -759,7 +764,7 @@ ul.list_nav {
 	border: none;
 }
 .email i{
-	margin-right: 5px; 
+	margin-right: 5px;
 	color: #faa61a;
 }
 .acc-btn {
@@ -863,7 +868,7 @@ button.product-btn {
 }
 .cart_icon {
   text-align: center;
-  
+
 }
 .cart_icon i {
   color: #343748;
@@ -974,7 +979,7 @@ li.cart_box {
   width: auto;
   height: auto;
 }
-#slider{ 
+#slider{
   max-width:100%;
   padding:0;
   background: #343748;
@@ -1221,7 +1226,7 @@ header.woocommerce-products-header {
 .site-title,
 .site-title a {
 	color: #222;
-	opacity: 1; 
+	opacity: 1;
 }
 body.has-header-image .site-title,
 body.has-header-video .site-title,
@@ -1269,7 +1274,7 @@ body:not(.title-tagline-hidden) .site-branding-text {
 	height: 75vh;
 	width: 100%;
 }
-.wp-custom-header .wp-custom-header-video-button { 
+.wp-custom-header .wp-custom-header-video-button {
 	background-color: rgba(34, 34, 34, 0.5);
 	border: 1px solid rgba(255, 255, 255, 0.6);
 	color: rgba(255, 255, 255, 0.6);
@@ -1284,7 +1289,7 @@ body:not(.title-tagline-hidden) .site-branding-text {
 	width: 45px;
 }
 .wp-custom-header .wp-custom-header-video-button:hover,
-.wp-custom-header .wp-custom-header-video-button:focus { 
+.wp-custom-header .wp-custom-header-video-button:focus {
 	border-color: rgba(255, 255, 255, 0.8);
 	background-color: rgba(34, 34, 34, 0.8);
 	color: #fff;
@@ -1330,7 +1335,7 @@ body:not(.title-tagline-hidden) .site-branding-text {
   top: 5px;
   width: auto;
   z-index: 100000; /* Above WP toolbar. */
-} 
+}
 
 /*------- Front Page ------------*/
 
@@ -1348,7 +1353,7 @@ body:not(.title-tagline-hidden) .site-branding-text {
 	background-size: cover;
 	position: relative;
 }
-.panel-image:before {	
+.panel-image:before {
 	background: -webkit-linear-gradient(to top, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.3) 100%);
 	background: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0)), to(rgba(0, 0, 0, 0.3)));
 	background: -webkit-linear-gradient(to top, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.3) 100%);
@@ -1799,7 +1804,7 @@ body:not(.supermarket-ecommerce-front-page) .entry-header {
     color: #fff;
 }
 .site-footer input.search-field {
-  width: 100%;	
+  width: 100%;
   background: transparent;
 }
 .site-footer input[type="search"]{
@@ -1812,7 +1817,7 @@ body:not(.supermarket-ecommerce-front-page) .entry-header {
     margin: 1em 0;
     border-bottom: 1px solid ;
     font-weight: 700;
-    letter-spacing: 1px; 
+    letter-spacing: 1px;
     color: #fff;
     font-size: 20px;
 }
@@ -1828,7 +1833,7 @@ body:not(.supermarket-ecommerce-front-page) .entry-header {
     width: 100%;
 }
 .site-footer .tagcloud a:hover{
-	background-color:#faa61a !important; 
+	background-color:#faa61a !important;
 }
 .copyright {
    padding: 15px 0px;
@@ -1990,7 +1995,7 @@ h2.widget-title {
     color: #3a3a3a;
 }
 #sidebar .tagcloud a:hover{
-	background-color:#faa61a; 
+	background-color:#faa61a;
 	color: #fff;
 }
 #sidebar button.search-submit{
@@ -2010,7 +2015,7 @@ h2.widget-title {
   border: 1px solid;
   padding: 10px;
   font-size: 14px;
-  width: 100%;	
+  width: 100%;
   border-radius: 0px;
 }
 #sidebar ul li a,
@@ -2234,7 +2239,7 @@ button.search-submit{
 	box-shadow: none;
 	display: inline-block;
 	float: left;
-	font-size: 14px !important; 
+	font-size: 14px !important;
 	margin: 4px 4px 0 0 !important;
 	padding: 4px 10px 5px !important;
 	position: relative;
@@ -2268,7 +2273,7 @@ button.search-submit{
 
 img,
 video {
-	height: auto; 
+	height: auto;
 	max-width: 100%;
 }
 
@@ -2508,7 +2513,7 @@ object {
 /*---------- Customizer -----------*/
 
 .highlight-front-sections.supermarket-ecommerce-customizer.supermarket-ecommerce-front-page .supermarket-ecommerce-panel:after {
-	border: 2px dashed #0085ba; 
+	border: 2px dashed #0085ba;
 	bottom: 1em;
 	content: "";
 	display: block;
@@ -2520,7 +2525,7 @@ object {
 }
 
 .highlight-front-sections.supermarket-ecommerce-customizer.supermarket-ecommerce-front-page .supermarket-ecommerce-panel .panel-content {
-	z-index: 2; 
+	z-index: 2;
 }
 
 /* Used for placeholder text */
@@ -2604,7 +2609,7 @@ object {
   }
   .toggle-menu span{
     font-size:30px;
-    cursor:pointer; 
+    cursor:pointer;
     text-align: right;
   }
   .toggle-menu{
@@ -2614,7 +2619,7 @@ object {
     display: block;
   }
   .nav-menu .nav ul li{
-    border-top:1px #303030 solid; 
+    border-top:1px #303030 solid;
     display:block;
   }
   .nav ul li a{
@@ -2639,7 +2644,7 @@ object {
   }
   .nav ul li ul li ul li a{
     padding-left:30px !important;
-  } 
+  }
   .nav-menu ul ul{
     position: static;
     width: 100%;
@@ -2788,7 +2793,7 @@ object {
 	textarea {
 		font-size: 15px;
 		line-height: 1.5;
-		
+
 	}
 
 	.entry-content blockquote.alignleft,
@@ -2929,7 +2934,7 @@ object {
 	.page .panel-content .recent-posts .entry-title {
 		font-size: 26px;
 	}
-	
+
 	/* Posts */
 
 	.site-content {
@@ -2961,7 +2966,7 @@ object {
 	.post-navigation .nav-next {
 		margin-top: 0;
 	}
-	
+
 	.blog .site-main > article,
 	.archive .site-main > article,
 	.search .site-main > article {
@@ -3205,7 +3210,7 @@ object {
 	.article_content{
 		margin-bottom: 15%;
 	}
-	
+
 	#slider .read-btn,a.custom-logo-link{
 		margin: 0;
 	}
@@ -3222,7 +3227,7 @@ object {
 	#header input[type="search"]{
 		float: left;
     	width: 80%;
-     	margin: 0px; 
+     	margin: 0px;
 	}
 	.search-bar form.woocommerce-product-search{
 		padding: 10px;
@@ -3320,7 +3325,7 @@ object {
 	}
 	button.product-btn{
 		font-size: 15px;
-		padding: 16px 0; 
+		padding: 16px 0;
 	}
 	.prev.page-numbers,.next.page-numbers{
  		float: none;
@@ -3357,7 +3362,7 @@ object {
 	#slider .inner_carousel p{
 		display: none;
 	}
-	.site-footer .widget_calendar th, 
+	.site-footer .widget_calendar th,
 	.site-footer .widget_calendar td{
 		padding: 0px
 	}
