--- a/wp-content/themes/supermarket-ecommerce/assets/css/autoptimize.css
+++ b/wp-content/themes/supermarket-ecommerce/assets/css/autoptimize.css
@@ -8253,11 +8253,11 @@ p.demo_store a {
 	text-decoration: none;
 	overflow: visible;
 	padding: .618em 1em;
-	font-weight: 700;
+	font-weight: 500;
 	border-radius: 3px;
 	left: auto;
-	color: #515151;
-	background-color: #ebe9eb;
+	color: #fff;
+	background-color: #ff541e;
 	border: 0;
 	display: inline-block;
 	background-image: none;
