--- a/wp-content/themes/supermarket-ecommerce/assets/css/custom-style.css
+++ b/wp-content/themes/supermarket-ecommerce/assets/css/custom-style.css
@@ -21,6 +21,37 @@ ol, ul {
     margin-left: 0!important;
 }
 
+.woocommerce div.product p.price, .woocommerce div.product span.price {
+    color: #ff541e!important;
+}
+
+mark.count {
+    background: #ff541e!important;
+}
+
+.woocommerce a.button.add_to_cart_button {
+    margin-top: 10px!important;
+    margin-bottom: 10px!important;
+}
+.header-wrapper .header-top .frnavbar-collapse .navbar-nav .menu-item.menu-item-has-children .sub-menu>.menu-item>a {
+    text-transform: capitalize;
+}
+
+.woocommerce-tabs h2, .related.products h2 {
+    font-size: 18px;
+}
+
+header.woocommerce-products-header {
+    margin-left: 12px;
+}
+.woocommerce .woocommerce-result-count {
+    margin-left: 16px!important;
+    margin-right: 10px!important;
+}
+
+.layout-grid .post-item, li.product-category.product, li.product-category.product:hover, .layout-grid .post-item:hover, .layout-grid .item:hover {
+    border: none;
+}
 
 .product-section .btn-gap, .product-section .spacer {
     -webkit-box-flex: 1;
@@ -151,6 +182,35 @@ div#contact-floated {
 div#contact-floated a {
   color: whitesmoke;
 }
+
+.wc-block-grid__product-price, .wc-block-grid__product-rating, .wc-block-grid__product-title {
+    font-size: 16px;
+}
+
+a.wp-block-button__link.add_to_cart_button.ajax_add_to_cart, span.wc-block-grid__product-onsale {
+    background: #ff531e;
+    font-size: 12px;
+    padding: 6px 12px;
+    outline: none;
+}
+span.wc-block-grid__product-onsale {
+    display: none;
+}
+
+.woocommerce  .related.products .products.columns-4 li.post-item{
+    width: 24%;
+    display: inline-block;
+    border: none;
+}
+
+.woocommerce  .related.products .products.columns-4 li.post-item .text-name .product-name {
+    font-size: 16px;
+}
+
+.woocommerce  .related.products .products.columns-4 li.post-item:hover{
+    border: none;
+}
+
 
 .footer-wrapper .widget-column .widget-title {
     margin-top: 40px;
