--- a/wp-content/themes/supermarket-ecommerce/assets/css/custom-style.css
+++ b/wp-content/themes/supermarket-ecommerce/assets/css/custom-style.css
@@ -25,6 +25,10 @@ ol, ul {
     color: #ff541e!important;
 }
 
+#mini-cart-box .cart-mini-container .woocommerce-mini-cart__empty-message {
+    text-align: center;
+}
+
 mark.count {
     background: #ff541e!important;
 }
