--- a/wp-content/themes/supermarket-ecommerce/assets/css/custom-style.css
+++ b/wp-content/themes/supermarket-ecommerce/assets/css/custom-style.css
@@ -30,28 +30,33 @@ ol, ul {
     text-align: center;
 }
 
-.woocommerce-mini-cart-item.mini_cart_item {
+#mini-cart-box .woocommerce-mini-cart-item.mini_cart_item {
     position: relative;
+}
+#mini-cart-box .woocommerce-mini-cart-item.mini_cart_item a{
+    display: inline;
 }
 #mini-cart-box .total, #mini-cart-box .woocommerce-mini-cart__buttons{
     padding-left: 16px;
 }
 #mini-cart-box .woocommerce-mini-cart__buttons .checkout {
-    margin-left: 15px;
+    margin-left: 8px!important;
 }
 .woocommerce-mini-cart-item.mini_cart_item .quantity {
 
 }
 
-.woocommerce-mini-cart-item.mini_cart_item a.remove {
+#mini-cart-box .woocommerce-mini-cart-item.mini_cart_item a.remove {
     position: absolute;
     right: 15px;
     top: 50%;
     font-size: 32px;
+    margin-top: -16px;
 }
 
-.woocommerce-mini-cart-item.mini_cart_item img {
+#mini-cart-box  .woocommerce-mini-cart-item.mini_cart_item img {
     width: 25%;
+    float: none;
 }
 
 mark.count {
