--- a/wp-content/themes/supermarket-ecommerce/assets/css/custom-style.css
+++ b/wp-content/themes/supermarket-ecommerce/assets/css/custom-style.css
@@ -31,7 +31,7 @@ ol, ul {
 }
 
 #mini-cart-box .woocommerce-mini-cart-item.mini_cart_item {
-    osition: relative;
+    position: relative;
     border-bottom: 1px solid #ccc;
 }
 #mini-cart-box .woocommerce-mini-cart-item.mini_cart_item a{
