--- a/wp-content/themes/supermarket-ecommerce/assets/css/custom-style.css
+++ b/wp-content/themes/supermarket-ecommerce/assets/css/custom-style.css
@@ -284,3 +284,7 @@ span.wc-block-grid__product-onsale {
 li.product-category.product {
   margin-right: 0 !important;
 }
+
+ul.berocket_aapf_widget.berocket_style_none.roundpcs.pcs {
+  display: block !important;
+}
