--- a/wp-content/themes/supermarket-ecommerce/assets/css/autoptimize.css
+++ b/wp-content/themes/supermarket-ecommerce/assets/css/autoptimize.css
@@ -58579,7 +58579,7 @@ span.spinner .spinner-input {
 }
 
 .woocommerce-checkout form.checkout .form-row .select2-container--default .select2-selection--single .select2-selection__rendered {
-	line-height: 32px!important;
+	line-height: normal!important;
 	padding-left: 0;
 	padding-right: 5px;
 }
