--- a/wp-content/themes/supermarket-ecommerce/style.css
+++ b/wp-content/themes/supermarket-ecommerce/style.css
@@ -1949,23 +1949,38 @@ body:not(.supermarket-ecommerce-front-page) .entry-header {
 .form-submit {
 	text-align: right;
 }
+#contact-floated .contact-info {
+	margin-bottom: 8px;
+}
+#contact-floated .contact-info .name{
+	font-size: 14px;
+}
+#contact-floated .contact-info .phone{
+	font-size: 16px;
+}
 /*-------- Widgets ----------*/
 #secondary {
 	padding: 1em 0 2em;
 }
 #sidebar .widget li{
-    border-bottom: 1px solid #bbb;
+    border-bottom: 0 solid #bbb;
+}
+#sidebar .berocket_term_depth_1 label {
+	padding-left: 0;
 }
 #sidebar .widget li:last-child {
     border: none;
 }
 #sidebar .widget {
-    padding: 15px;
+    padding: 0;
     margin-bottom: 30px;
     border:1px dashed #e4e4e4;
 }
 #sidebar .widget:hover{
-	border:1px solid #faa61a;
+	border: none solid #faa61a;
+}
+#sidebar .berocket_aapf_widget_show.show_button.mobile_hide {
+	opacity: 0;
 }
 h2.widget-title {
     font-size: 24px;
